--- a/SalesWebMVC/SalesWebMVC/appsettings.json
+++ b/SalesWebMVC/SalesWebMVC/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMVCContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMVCContext-8215f8e9-3a07-49a8-a1ab-af563c257bef;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMVCContext": "server=localhost;userid=root;password=1234;database=saleswebmvcappdb"
   }
 }
